# langchain-bot

./: .env-template  README.md  pyproject.toml  tree.py
app/: __main__.py  config.py  enums.py  rules.py
app/database/: appointment.py  chat_history.py  master.py  service.py  slot.py  system.py  user.py
app/handlers/: __init__.py  photo.py  photo_caption.py  text.py
app/handlers/middlewares/: __init__.py  context.py
app/llm/: __init__.py  calls.py  decorators.py  tools.json  wrapper.py
app/llm/prompts/: __init__.py  entry.txt
app/utils/: auto_cleaner.py
prompts/: beauty_salon_admin.txt
