[tool.poetry]
name = "langchain-bot"
version = "0.1.0"
description = ""
authors = ["lisishindanil <lisishindanil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mubble = "^1.4.0"
tortoise-orm = "^0.21.7"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.14"
langsmith = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
