[tool.poetry]
name = "langchain-bot"
version = "0.1.0"
description = ""
authors = ["lisishindanil <lisishindanil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
tortoise-orm = "^0.21.7"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.14"
langsmith = "^0.2.6"
mubble = "^1.6.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
